 - Phalcon\Http\Cookie::__toString() will return a string value (#1428)
 - Camelize does not ignore the last character of a string anymore (#1436)
 - APC tests do not run under CLI when apc.enable_cli is 0 (#1449)
 - Phalcon\Debug::uri now support both http and https (#987)
 - Fixed inconsistency in Tag::stylesheetLink/javascriptInclude w.r.t local URLs (#1486)

1.2.4
 - Fixed broken ACL inheritance (#905)
 - Fixed crash while rendering element's label (#1210)
 - Fixed XSS vulnerabilities (#1216, #1190)
 - Added support for APCu 4.0.2+ (#1234)
 - Fixed chaining of CSS/JS filters (#1198)
 - Fixed notices and warnings with complex PHQL queries (#1222)
 - Memory allocation optimizations (#1220)
 - Fixed regular expression in \Phalcon\Mvc\Model\Validator\Email (#1243)
 - Documentation bug fixes
 - Phalcon\Mvc\Model::hasOne/hasMany/belongsTo/hasManyToMany/addBehavior() are now public methods (#1166)
 - Added support for MySQL DOUBLE type (#1128)
 - Added support for UTF-8 characters in jsmin
 - Added support for UTF-8 to \Phalcon\Debug (#1099)
 - Fixed regression in \Phalcon\Http\Request::getRawBody() (#1091)
 - Implemented \Phalcon\Cache\Backend\Memory::queryKeys() (#1093)
 - Redirects use status descriptions from RFC 2616 (#1175)
 - \Phalcon\Config::merge now works with derived classes (#1024)
 - \Phalcon\Security::checkHash() allows to restrict the length of the password to avoid attacks like https://www.djangoproject.com/weblog/2013/sep/15/security/
 - \Phalcon\Config can now be cloned (#1277)
 - \Phalcon\Mvc\Query\Builder::__construct() ignores joins (#1327)
 - Bug with a custom Events Manager in Phalcon\Mvc\Models (#1314)
 - Micro Collections return Phalcon\Mvc\Micro\CollectionInterface (#1130)
 - \Phalcon\Forms\Form::getMessages() does not generate a fatal error if the form is valid (#1349)
 - Fixed memory leaks (#1345)
 - Fixed invalid memory reads/writes across the code (#1340)
 - Fixed HAVING handling in Phalcon\Mvc\QueryBuilder (#1396)